# coveralls-rust

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: claude-review.yml  update-milestone-on-release.yml
src/: api.rs  cli_args.rs  coverage.rs  coveralls.rs  coverralls.rs  env.rs  helpers.rs  lib.rs  main.rs  service.rs  work.rs
src/config/: appveyor.rs  buildkite.rs  circleci.rs  coveralls_env.rs  generic.rs  github_actions.rs  jenkins.rs  mod.rs  semaphore.rs  travis.rs
src/git/: head.rs  infos.rs  mod.rs  remote.rs
src/git/fetcher/: cmdgit.rs  infos.rs  libgit.rs  mod.rs
tests/: coverage_format.rs  env.rs  service.rs  workflow.rs
