[package]
name = "coveralls"
description = "Send job to Coveralls (coveralls.io)"
version = "0.1.2"
authors = ["Frédéric Meyer <frederic.meyer.77@gmail.com>"]
edition = "2021"
license = "LGPL-3.0"
homepage = "https://github.com/corebreaker/coveralls-rust"
repository = "https://github.com/corebreaker/coveralls-rust"
exclude = [".gitignore"]
keywords = ["ci", "coverage", "coveralls"]
categories = [
    "command-line-utilities",
    "development-tools::profiling",
    "development-tools::build-utils",
    "development-tools::coverage",
    "continous-integration",
]

[dependencies]
regex = "~1.5.4"
itertools = "~0.10.1"
simple-error = "~0.2"
serde_json = "~1.0.71"
const_format = "~0.2.22"
git2 = { version = "~0.13.24", optional = true }
serde = { version = "~1.0.130", features = ["derive"] }
clap = { version = "~2.33.3", features = ["wrap_help", "color"] }
reqwest = { version = "~0.11.6", features = ["blocking", "multipart"] }

[features]
std = []
libgit = ["git2"]
