[package]
name = "coveralls"
description = "Send job to Coveralls (coveralls.io)"
version = "0.1.4"
authors = ["Frédéric Meyer <frederic.meyer.77@gmail.com>"]
edition = "2021"
license = "LGPL-3.0"
homepage = "https://github.com/corebreaker/coveralls-rust"
repository = "https://github.com/corebreaker/coveralls-rust"
exclude = [".gitignore"]
keywords = ["ci", "coverage", "coveralls"]
categories = [
    "command-line-utilities",
    "development-tools::profiling",
    "development-tools::build-utils",
]

[dependencies]
regex = "1.10.4"
itertools = "0.12.1"
simple-error = "0.3.0"
serde_json = "1.0.116"
const_format = "0.2.32"
git2 = { version = "0.18.3", optional = true }
serde = { version = "1.0.200", features = ["derive"] }
clap = { version = "4.5.4", features = ["wrap_help", "color", "derive"] }
reqwest = { version = "0.12.4", features = ["blocking", "multipart"] }

[features]
std = []
libgit = ["git2"]
