[package]
name = "coveralls"
description = "Send job to Coveralls (coveralls.io)"
version = "0.2.0"
authors = ["Frédéric Meyer <frederic.meyer.77@gmail.com>"]
edition = "2024"
license = "LGPL-3.0"
readme = "README.md"
homepage = "https://github.com/corebreaker/coveralls-rust"
repository = "https://github.com/corebreaker/coveralls-rust"
documentation = "https://docs.rs/coveralls"
exclude = [".gitignore"]
keywords = ["ci", "coverage", "coveralls"]
categories = [
    "command-line-utilities",
    "development-tools::profiling",
    "development-tools::build-utils",
]

# Build the documentation on docs.rs with every feature enabled (including `libgit`).
[package.metadata.docs.rs]
all-features = true

[workspace.metadata.scripts]
fmt = "cargo +nightly fmt --all"
gc = "cargo sweep -r -t 10 ."

[dependencies]
log = "0.4"
regex = "1.12"
env_logger = "0.11"
itertools = "0.15"
simple-error = "0.3"
serde_json = "1.0"
const_format = "0.2"
git2 = { version = "0.21", optional = true }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.6", features = ["wrap_help", "color", "derive"] }
reqwest = { version = "0.13", features = ["blocking", "multipart"] }

[features]
default = []
libgit = ["dep:git2"]
